added reading of ldap group from edit page to selenium testing

--- a/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
@@ -51,7 +51,7 @@
                          iconPos="right"
                          styleClass="button-filled-blue"
                          disabled="#{LdapGruppenForm.saveDisabled}"
-                         onclick="PF('notifications').renderMessage({'summary':'#{msgs.ldapgroupSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
+                         onclick="PF('notifications').renderMessage({'summary':'#{msgs.ldapGroupSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
                          update="notifications"/>
         <p:commandButton id="saveButtonToggler"
                          actionListener="#{LdapGruppenForm.setSaveDisabled(false)}"
