--- a/Kitodo/src/main/webapp/pages/login.xhtml
+++ b/Kitodo/src/main/webapp/pages/login.xhtml
@@ -76,7 +76,7 @@
                         </h:panelGroup>
 
                         <h:panelGroup
-                                rendered="#{LoginForm.myBenutzer == null and LoginForm.schonEingeloggt}">
+                                rendered="#{LoginForm.myBenutzer == null and LoginForm.alreadyLoggedIn}">
 
                             <h:outputText value="#{msgs.sieSindBereitsEingeloggt}"/>
                             <br/>
