Display errors on metadata editor page in global messages component

--- a/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
+++ b/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
@@ -26,6 +26,9 @@
             <p:panel id="metadataEditorHeader">
                 <ui:include src="/WEB-INF/templates/includes/metadataEditor/header.xhtml" />
             </p:panel>
+
+            <p:messages id="error-messages" autoUpdate="true" />
+
             <!-- Content -->
             <div id="metadataEditorWrapper">
 
