Replace fehler with error

--- a/Kitodo/src/main/webapp/pages/error.xhtml
+++ b/Kitodo/src/main/webapp/pages/error.xhtml
@@ -49,7 +49,7 @@
                         <!-- Breadcrumb -->
                         <h:panelGrid id="id2" columns="1" styleClass="layoutInhaltKopf">
                             <h:panelGroup id="id3">
-                                <h:outputText id="id4" value="#{msgs.fehler}"/>
+                                <h:outputText id="id4" value="#{msgs.error}"/>
                             </h:panelGroup>
                         </h:panelGrid>
                         <!-- // Breadcrumb -->
