--- a/Kitodo/src/main/webapp/pages/userConfiguration.xhtml
+++ b/Kitodo/src/main/webapp/pages/userConfiguration.xhtml
@@ -17,7 +17,7 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui">
     <ui:define name="contentHeader">
-        <h3>#{msgs.benutzerkonfiguration}</h3>
+        <h3>#{msgs.userConfiguration}</h3>
     </ui:define>
 
     <ui:define name="pageTabView">
@@ -33,6 +33,6 @@
 
     <ui:define name="breadcrumbs">
         <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
-        <li><a href="">#{msgs.benutzerkonfiguration}</a></li>
+        <li><a href="">#{msgs.userConfiguration}</a></li>
     </ui:define>
 </ui:composition>
