Fixes in ProjekteForm

--- a/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
@@ -55,7 +55,7 @@
                         </div>
                         </p:row>
                     </p:panelGrid>
-                    <p:commandButton action="#{ProjekteForm.filegroupSave()}"
+                    <p:commandButton action="#{ProjekteForm.saveFileGroup()}"
                                      update="editForm"
                                      oncomplete="PF('editFileGroupDialog').hide();jQuery('#editForm\\:saveButtonToggler').click()"
                                      value="#{msgs.uebernehmen}"
