Replace deprecated 'autoUpdate' attribute with corresponding component

--- a/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
+++ b/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
@@ -27,7 +27,9 @@
                 <ui:include src="/WEB-INF/templates/includes/metadataEditor/header.xhtml" />
             </p:panel>
 
-            <p:messages id="error-messages" autoUpdate="true" />
+            <p:messages id="error-messages">
+                <p:autoUpdate/>
+            </p:messages>
 
             <!-- Content -->
             <div id="metadataEditorWrapper">
