--- a/Kitodo/src/main/webapp/pages/indexingPage.xhtml
+++ b/Kitodo/src/main/webapp/pages/indexingPage.xhtml
@@ -14,9 +14,13 @@
 <ui:composition
         template="/WEB-INF/templates/baseListView.xhtml"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui"
         xmlns:o="http://omnifaces.org/ui">
+    <f:metadata>
+        <f:viewAction action="#{indexingForm.updateView()}"/>
+    </f:metadata>
     <ui:define name="contentHeader">
         <h3>#{msgs.indexing}</h3>
     </ui:define>
