--- a/Kitodo/src/main/webapp/pages/docketEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/docketEdit.xhtml
@@ -74,7 +74,19 @@
                                          required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
                     </p:row>
-                    <p:row/>
+                    <p:row>
+                        <div>
+                            <p:outputLabel for="client" value="#{msgs.client}"/>
+                            <p:selectOneMenu id="client"
+                                             converter="#{clientConverter}"
+                                             value="#{DocketForm.myDocket.client}">
+                                <f:selectItem itemLabel="#{msgs.clientNon}" itemValue="noClient"/>
+                                <f:selectItems value="#{DocketForm.clients}" var="client" itemValue="#{client}"
+                                               itemLabel="#{client.name}"/>
+                                <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
+                            </p:selectOneMenu>
+                        </div>
+                    </p:row>
                 </p:panelGrid>
             </p:tab>
         </p:tabView>
