--- a/Kitodo/src/main/webapp/pages/rulesetEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/rulesetEdit.xhtml
@@ -72,6 +72,19 @@
                                          value="#{RulesetForm.ruleset.file}"
                                          required="#{empty param['editForm:saveButtonToggler']}"/>
                         </div>
+                    </p:row>
+                    <p:row>
+                        <div>
+                            <p:outputLabel for="client" value="#{msgs.client}"/>
+                            <p:selectOneMenu id="client"
+                                             converter="#{clientConverter}"
+                                             value="#{RulesetForm.ruleset.client}">
+                                <f:selectItem itemLabel="#{msgs.clientNon}" itemValue="noClient"/>
+                                <f:selectItems value="#{RulesetForm.clients}" var="client" itemValue="#{client}"
+                                               itemLabel="#{client.name}"/>
+                                <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
+                            </p:selectOneMenu>
+                        </div>
                         <div>
                             <p:outputLabel for="sortByRuleset" value="#{msgs.metadatenSortierungNachRegelsatz}"/>
                             <p:selectBooleanCheckbox id="sortByRuleset"
@@ -79,7 +92,6 @@
                                                      onchange="jQuery('#editForm\\:saveButtonToggler').click()"/>
                         </div>
                     </p:row>
-                    <p:row/>
                 </p:panelGrid>
             </p:tab>
         </p:tabView>
